# umatter

./: .gitignore  ChangeLog  Doxyfile  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac
.github/workflows/: make.yml
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
include/: Makefile.am  Makefile.am.build  Makefile.in
include/umatter/: typedef.h  umatter.h
include/umatter/util/: bytes.h  log.h  timer.h
lib/: Makefile.am  Makefile.in
lib/macos/libumatter.xcodeproj/: project.pbxproj
lib/unix/: Makefile.am  Makefile.am.build  Makefile.in
src/umatter/net/: datagram_packet.c  interface.c  interface.h  interface_function.c  interface_list.c  net_function.c  socket.c  socket.h  socket_opt.c  socket_opt.h
src/umatter/util/: _log.h  bytes.c  cond.c  cond.h  list.c  list.h  log.c  logs.c  logs.h  mutex.c  mutex.h  strings.c  strings.h  strings_function.c  strings_tokenizer.c  thread.c  thread.h  thread_list.c  timer.c
test/: BytesTest.cpp  InterfaceTest.cpp  Makefile.am  Makefile.in  TestMain.cpp
test/unix/: Makefile.am  Makefile.am.build  Makefile.in  umattertest
